recursion.lessons.recursion.spiral.Spiral.scala.error
Spiral:7: error: value asTnstance is not a member of Int
		avance(length.asTnstance[Int])
                              ^